Saving file increases size #94650

Closed
opened 2022-01-05 00:20:47 +01:00 by Marco · 10 comments
Member

System Information
Operating system: Arch Linux

Blender Version
Broken: 3.0

Short description of error
Saving a project with a linked object increases the size of the file and makes the next opening of the file to crash.
Test.zip

Exact steps for others to reproduce the error

  • Open Test.blend
  • In the Outliner right click on the "Building" object, and click ID Data > Make Library Override
  • Save the file and close
  • Open it, save again and close (repeat this until the file fails to open)
**System Information** Operating system: Arch Linux **Blender Version** Broken: 3.0 **Short description of error** Saving a project with a linked object increases the size of the file and makes the next opening of the file to crash. [Test.zip](https://archive.blender.org/developer/F12789366/Test.zip) **Exact steps for others to reproduce the error** - Open Test.blend - In the Outliner right click on the "Building" object, and click ID Data > Make Library Override - Save the file and close - Open it, save again and close (repeat this until the file fails to open)
Author
Member

Added subscriber: @nacioss

Added subscriber: @nacioss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @sozap

Added subscriber: @sozap
Author
Member

Is there any workaround at the moment?

Is there any workaround at the moment?

Added subscriber: @mont29

Added subscriber: @mont29

This is caused by a giant amount of hidden dependencies (objects in the asset collection), and a bad behavior of resync process.

Will prevent resync to happen on ID overridden with the single 'Make Library Override' call (since they are not part of an overridden hierarchy, they cannot be resynced in practice anyway). This will fix that specific case (for new files, not existing ones).

In general, it is much better practice anyway to put all dependencies of a to-be-overriden data into a single ancestor collection, and link/override that collection...

Please also note that there are still improvements on-going here, especially regarding the resync process.

This is caused by a giant amount of hidden dependencies (objects in the asset collection), and a bad behavior of resync process. Will prevent resync to happen on ID overridden with the single 'Make Library Override' call (since they are not part of an overridden hierarchy, they cannot be resynced in practice anyway). This will fix that specific case (for new files, not existing ones). In general, it is much better practice anyway to put all dependencies of a to-be-overriden data into a single ancestor collection, and link/override that collection... Please also note that there are still improvements on-going here, especially regarding the resync process.

@nacioss work around would be to disable the automatic resync option in 'Experimental' section of user preferences.

@nacioss work around would be to disable the automatic resync option in 'Experimental' section of user preferences.

This issue was referenced by bfb760e16a

This issue was referenced by bfb760e16acbc33661739154f0ab8f5505987d1d
Author
Member

Makes sense, thank you.
Putting everything under a Collection in the Building.blend file and linking that collection and then doing Make Library Override Hierarchy works fine.

Makes sense, thank you. Putting everything under a Collection in the Building.blend file and linking that collection and then doing Make Library Override Hierarchy works fine.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-01-05 17:30:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94650
No description provided.